Adds general URI support to UserInfo (issue #79)